fix: double scrollbar

--- a/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee-profile/edit-employee-main/edit-employee-main.component.scss
+++ b/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee-profile/edit-employee-main/edit-employee-main.component.scss
@@ -6,16 +6,26 @@ $radius: nb-theme(border-radius);
   margin-top: 20px;
 }
 
-.organization-container{
- background-color: rgba(126, 126, 143, 0.1);
+.organization-container {
+  background-color: rgba(126, 126, 143, 0.1);
 }
 
-.content{
+.organization-photo {
+  width: 100px;
+  height: 100px;
+  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.25);
+  object-fit: cover;
+  border-radius: $radius;
+}
+
+.content {
   background-color: rgba(50, 50, 50, 0.03);
   padding: 20px;
   border-radius: 0 $radius $radius $radius;
 }
 
-:host{
+:host {
   padding: 0;
+  overflow-y: overlay;
+  max-height: calc(100vh - 28rem);
 }
