--- a/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee.component.scss
+++ b/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee.component.scss
@@ -14,6 +14,12 @@
   }
 }
 
+.employee-image {
+  width: 48px;
+  height: 48px;
+  object-fit: cover;
+}
+
 .edit-icon {
   margin-left: 30px;
   position: relative;
@@ -76,9 +82,6 @@
   }
 }
 
-:host > nb-card {
-  min-height: 47.5rem;
-}
 
 .icon-verified {
   margin-right: 5px;
